#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([yskip], [1.0], [nkaji@yahoo-corp.jp])
AC_CONFIG_SRCDIR([src/yskip.cpp])
AC_CONFIG_HEADERS([config.h])

AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

CXXFLAGS="-std=c++0x -O3 -funroll-loops -pthread"

AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
AC_OUTPUT
