

noinst_PROGRAMS = test_util test_vec_util test_random test_unigram_table test_fast_sigmoid test_vocab test_dense_matrix test_skipgram
# dist_SCRIPTS = regression_test.sh
# dist_DATA = tweet.txt model-r0-f0 model-r0-f0-m100

test_util_SOURCES = test_util.cpp
test_vec_util_SOURCES = test_vec_util.cpp
test_random_SOURCES = test_random.cpp
test_unigram_table_SOURCES = test_unigram_table.cpp
test_fast_sigmoid_SOURCES = test_fast_sigmoid.cpp
test_vocab_SOURCES = test_vocab.cpp
test_dense_matrix_SOURCES = test_dense_matrix.cpp
test_skipgram_SOURCES = test_skipgram.cpp

TESTS = test_util test_vec_util test_random test_fast_sigmoid test_unigram_table test_vocab test_dense_matrix test_skipgram
